[FIX] removeDresseur de Arene